swiiper, perview auto heigth, loop

--- a/src/app/components/messenger-chatbox/components/messenger-chat-head/messenger-chat-head.component.html
+++ b/src/app/components/messenger-chatbox/components/messenger-chat-head/messenger-chat-head.component.html
@@ -14,8 +14,8 @@
         <div
           style="display: flex; justify-content: center"
           (pointerdown)="startHold($event)"
-          (pointerup)="cancelHold()"
-          (mouseleave)="cancelHold()"
+          (pointerup)="cancelHold($event)"
+          (mouseleave)="cancelHold($event)"
         >
           <img
             class="profile-picture"
