--- a/src/app/components/messenger-chatbox/components/messenger-chat/messenger-chat.component.scss
+++ b/src/app/components/messenger-chatbox/components/messenger-chat/messenger-chat.component.scss
@@ -1,178 +1,187 @@
-.messenger-chat{
-    overflow-x: hidden;
-    // swiper css
-    .chat-swiper-container {
-        width: 100%;
-        padding: 16px;
-    
-        .swiper-wrapper{
-            width: fit-content;
-        
-            .swiper-slide {
-                background-position: center;
-                background-size: cover;
-                width: auto;
-                height: auto;
-                visibility: hidden;
+.messenger-chat {
+  overflow-x: hidden;
+  // swiper css
+  .chat-swiper-container {
+    width: 100%;
+    padding: 16px;
 
-                .chatbox-card{
-                    width: 100%;
-                    color: var(--light-gray);
-                    border-radius: 11.17px;
-                    background: var(--secondary-black);
-                    box-shadow: 4.654px 4.654px 9.309px 0px rgba(0, 0, 0, 0.32) inset, -2.793px -2.793px 3.723px 0px rgba(255, 255, 255, 0.10) inset;
-                    padding: 16px;
-                    
-                    .chatbox-card-body{
-                        height: 55vh;
-                        overflow-y: auto;
-                        position: relative;
+    .swiper-wrapper {
+      width: fit-content;
 
-                        .attachment-card{
-                            .attachment-image{
-                                max-width: 200px;
-                                max-height: 200px;
-                            }
+      .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: auto;
+        height: auto;
+        // visibility: hidden;
 
-                            .file-icon{
-                                width: 30px;
-                                height: 30px;
-                            }
-                        }
-                    }
+        .chatbox-card {
+          width: 100%;
+          color: var(--light-gray);
+          border-radius: 11.17px;
+          background: var(--secondary-black);
+          box-shadow: 4.654px 4.654px 9.309px 0px rgba(0, 0, 0, 0.32) inset,
+            -2.793px -2.793px 3.723px 0px rgba(255, 255, 255, 0.1) inset;
+          padding: 16px;
 
-                    .chatbox-card-footer{
-                        display: flex;
-                        align-items: stretch;
-                        box-shadow: -0.818px -0.818px 3.272px 0px rgba(203, 199, 209, 0.50) inset, 6.954px 8.999px 8.181px 1.023px rgba(17, 16, 20, 0.70) inset;
-                        border-radius: 13px;
-                        background: var(#27242C, linear-gradient(191deg, #27242C 61.33%, #0C0B0E 101.43%));
-                        min-height: 100px;
+          .chatbox-card-body {
+            height: 35vh;
+            overflow-y: auto;
+            position: relative;
 
-                        .textarea-container {
-                            flex: 10;
-                            padding: 8px;
+            .attachment-card {
+              .attachment-image {
+                max-width: 200px;
+                max-height: 200px;
+              }
 
-                            textarea {
-                                width: 100%;
-                                border: none;
-                                box-shadow: none;
-                                resize: none;
-                                background: transparent;
-                                font-family: 'Gilroy-Regular', sans-serif;
-                                color: var(--light-gray);
-                            }
+              .file-icon {
+                width: 30px;
+                height: 30px;
+              }
+            }
+          }
 
-                            textarea::placeholder{
-                                color: var(--dark-gray);
-                                font-size: 16px;
-                                font-style: normal;
-                                font-weight: 500;
-                                letter-spacing: -0.091px;
-                                font-family: 'Gilroy-Regular', sans-serif;
-                            }
-                        }
+          .chatbox-card-footer {
+            display: flex;
+            align-items: stretch;
+            box-shadow: -0.818px -0.818px 3.272px 0px rgba(203, 199, 209, 0.5) inset,
+              6.954px 8.999px 8.181px 1.023px rgba(17, 16, 20, 0.7) inset;
+            border-radius: 13px;
+            background: var(
+              #27242c,
+              linear-gradient(191deg, #27242c 61.33%, #0c0b0e 101.43%)
+            );
+            min-height: 100px;
 
-                        .icon-container {
-                            flex: 0;
-                            display: flex;
-                            flex-direction: column;
-                            justify-content: space-between;
-                            padding: 8px;
+            .textarea-container {
+              flex: 10;
+              padding: 8px;
 
-                            .icon {
-                                text-align: center;
-                                cursor: pointer;
+              textarea {
+                width: 100%;
+                border: none;
+                box-shadow: none;
+                resize: none;
+                background: transparent;
+                font-family: "Gilroy-Regular", sans-serif;
+                color: var(--light-gray);
+              }
 
-                                img {
-                                    width: 16px;
-                                    height: 16px;
-                                }
-                            }
-                        }
-                    }
+              textarea::placeholder {
+                color: var(--dark-gray);
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 500;
+                letter-spacing: -0.091px;
+                font-family: "Gilroy-Regular", sans-serif;
+              }
+            }
 
-                    .message{
-                        background-blend-mode: overlay;
-                        border: 0.333px solid var(--primary-white);
-                        padding: 16px;
-                        width: calc(100% - 60px);
-                    }
+            .icon-container {
+              flex: 0;
+              display: flex;
+              flex-direction: column;
+              justify-content: space-between;
+              padding: 8px;
 
-                    .message.received-message{
-                        border-radius: 10.762px 10.762px 10.762px 0px;
-                        background: var(--light-pink);
-                        backdrop-filter: blur(6.66px);
-                    }
+              .icon {
+                text-align: center;
+                cursor: pointer;
 
-                    .message.sent-message{
-                        border-radius: 10.762px 10.762px 0px 10.762px;
-                        background: var(----lighest-pink);
-                        backdrop-filter: blur(7.51px);
-                        text-align: right;
-                        position: relative;
-                        margin-left: 60px;
-                    }
+                img {
+                  width: 16px;
+                  height: 16px;
                 }
+              }
             }
+          }
 
-            .swiper-slide.selected-slide{
-                visibility: visible;
-            }
-        }
+          .message {
+            background-blend-mode: overlay;
+            border: 0.333px solid var(--primary-white);
+            padding: 16px;
+            width: calc(100% - 60px);
+          }
 
-        .disabled {
-            opacity: 0.5;
-            cursor: not-allowed;
+          .message.received-message {
+            border-radius: 10.762px 10.762px 10.762px 0px;
+            background: var(--light-pink);
+            backdrop-filter: blur(6.66px);
+          }
+
+          .message.sent-message {
+            border-radius: 10.762px 10.762px 0px 10.762px;
+            background: var(----lighest-pink);
+            backdrop-filter: blur(7.51px);
+            text-align: right;
+            position: relative;
+            margin-left: 60px;
+          }
         }
+      }
+
+      .swiper-slide.selected-slide {
+        .chatbox-card {
+          .chatbox-card-body {
+            height: 40vh;
+          }
+        }
+      }
     }
 
-    // responsive
-    @media screen and (max-width: 576px) {
-        .swiper-slide {
-            visibility: visible !important;
-        }
+    .disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
+  }
 
-    @media screen and (max-height: 600px) {
-        .chatbox-card-body{
-            height: 50vh !important;
-        }
+  // responsive
+  @media screen and (max-width: 576px) {
+    .swiper-slide {
+      visibility: visible !important;
     }
+  }
 
-    @media screen and (min-height: 1000px){
-        .chatbox-card-body{
-            height: 70vh !important;
-        }
+  @media screen and (max-height: 600px) {
+    .chatbox-card-body {
+      height: 50vh !important;
     }
+  }
 
-    @media screen and (min-width: 320px) and (max-width: 360.98px) {
-        .chatbox-card{
-            width: 320px !important;
-        }
+  @media screen and (min-height: 1000px) {
+    .chatbox-card-body {
+      height: 70vh !important;
     }
+  }
 
-    @media screen and (min-width: 361px) and (max-width: 390.98px) {
-        .chatbox-card{
-            width: 360px !important;
-        }
+  @media screen and (min-width: 320px) and (max-width: 360.98px) {
+    .chatbox-card {
+      width: 320px !important;
     }
+  }
 
-    @media screen and (min-width: 391px) and (max-width: 480.98px) {
-        .chatbox-card{
-            width: 390px !important;
-        }
+  @media screen and (min-width: 361px) and (max-width: 390.98px) {
+    .chatbox-card {
+      width: 360px !important;
     }
+  }
 
-    @media screen and (min-width: 481px) and (max-width: 576.98px) {
-        .chatbox-card{
-            width: 480px !important;
-        }
+  @media screen and (min-width: 391px) and (max-width: 480.98px) {
+    .chatbox-card {
+      width: 390px !important;
     }
+  }
 
-    @media screen and (min-width: 577px) and (max-width: 767.98px) {
-        .chatbox-card{
-            width: 570px !important;
-        }
+  @media screen and (min-width: 481px) and (max-width: 576.98px) {
+    .chatbox-card {
+      width: 480px !important;
     }
+  }
+
+  @media screen and (min-width: 577px) and (max-width: 767.98px) {
+    .chatbox-card {
+      width: 570px !important;
+    }
+  }
 }
