--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~swiper/swiper-bundle.css";
+@import "../lib/swiper/swiper-bundle.css";
 @import '@ctrl/ngx-emoji-mart/picker';
 
 /*-----------------
